# neovim.cpp

./: .gitignore  CMakeLists.txt  README.md
include/: input.h  screen.h
src/: input.cpp  main.cpp  screen.cpp
